--- a/index.css
+++ b/index.css
@@ -351,6 +351,9 @@
   .footer__row__3 > .dropdown__container > .language__drop__down {
     color: #757575;
   }
+  ::-webkit-scrollbar{
+    display: none;
+  }
   
   @media (min-width: 768px) {
     .hero__bg__image__container {
